# my_module

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
.github/workflows/: github-pages.yml  pypi.yml  test-pypi.yml
examples/: example1.py
src/my_module/: __init__.py  my_functions.py
tests/: test1.py
